@@ -272,3 +272,143 @@ http://oldwiki.mingw.org/index.php/sockets
 http://old.nabble.com/socket-and-version-can%27t-be-linked-td16026957.html
 
 ---
+
+00000000  48 45 4c 4f 00 00 00 c3  0c 00 7c e9 d3 52 ed 83 HELO.... ..|..R..
+
+00000010  92 04 85 de 9e 3d 7f c0  37 9f 18 e2 8b 03 1c 64 .....=.. 7......d
+
+00000020  00 00 00 00 00 00 00 00  00 00 45 4e 4d 6f 64 65 ........ ..ENMode
+
+00000030  6c 3d 73 71 75 65 65 7a  65 70 6c 61 79 2c 4d 6f l=squeez eplay,Mo
+
+00000040  64 65 6c 4e 61 6d 65 3d  53 71 75 65 65 7a 65 50 delName= SqueezeP
+
+00000050  6c 61 79 2c 46 69 72 6d  77 61 72 65 3d 37 2e 37 lay,Firm ware=7.7
+
+00000060  2e 32 2d 72 30 2c 55 8b  ec 51 6a 40 68 20 d7 47 .2-r0,U. .Qj@h .G
+
+00000070  2c 6f 67 67 2c 66 6c 63  2c 61 69 66 2c 70 63 6d ,ogg,flc ,aif,pcm
+
+00000080  2c 6d 70 33 2c 4d 61 78  53 61 6d 70 6c 65 52 61 ,mp3,Max SampleRa
+
+00000090  74 65 3d 31 39 32 30 30  30 2c 41 63 63 75 72 61 te=19200 0,Accura
+
+000000A0  74 65 50 6c 61 79 50 6f  69 6e 74 73 2c 49 6d 6d tePlayPo ints,Imm
+
+000000B0  65 64 69 61 74 65 43 72  6f 73 73 66 61 64 65 2c ediateCr ossfade,
+
+000000C0  74 65 73 74 2c 52 74 6d  70 3d 32                test,Rtm p=2
+
+    00000000  00 1c 73 74 72 6d 71 30  6d 3f 3f 3f 3f 00 00 00 ..strmq0 m????...
+
+    00000010  30 00 00 00 00 00 00 00  00 00 00 00 00 00       0....... ......
+
+000000CB  53 54 41 54 00 00 00 33  53 54 4d 66 00 00 00 00 STAT...3 STMf....
+
+000000DB  30 00 00 00 00 00 00 00  00 00 00 00 00 00 00 ff 0....... ........
+
+000000EB  ff 00 00 4e 62 00 35 d5  40 00 00 00 00 00 00 00 ...Nb.5. @.......
+
+000000FB  00 00 00 00 00 00 00 00  00 00 00                ........ ...
+
+    0000001E  00 05 73 65 74 64 00                             ..setd.
+
+    00000025  00 05 73 65 74 64 04                             ..setd.
+
+00000106  53 45 54 44 00 00 00 0c  00 53 71 75 65 65 7a 65 SETD.... .Squeeze
+
+00000116  50 6c 61 79 53 54 41 54  00 00 00 33 73 65 74 64 PlaySTAT ...3setd
+
+00000126  00 00 00 00 30 00 00 00  00 00 00 00 00 00 00 00 ....0... ........
+
+00000136  00 00 00 ff ff 00 00 4e  64 00 35 d5 40 00 00 00 .......N d.5.@...
+
+00000146  00 00 00 00 00 00 00 00  00 00 00 00 00 00 00    ........ .......
+
+    0000002C  00 06 61 75 64 65 01 01                          ..aude.. 
+
+00000155  53 54 41 54 00 00 00 33  73 65 74 64 00 00 00 00 STAT...3 setd....
+
+00000165  30 00 00 00 00 00 00 00  00 00 00 00 00 00 00 ff 0....... ........
+
+00000175  ff 00 00 4e 65 00 35 d5  40 00 00 00 00 00 00 00 ...Ne.5. @.......
+
+00000185  00 00 00 00 00 00 00 00  00 00 00                ........ ...
+
+00000190  53 54 41 54 00 00 00 33  61 75 64 65 00 00 00 00 STAT...3 aude....
+
+000001A0  30 00 00 00 00 00 00 00  00 00 00 00 00 00 00 ff 0....... ........
+
+000001B0  ff 00 00 4e 66 00 35 d5  40 00 00 00 00 00 00 00 ...Nf.5. @.......
+
+000001C0  00 00 00 00 00 00 00 00  00 00 00                ........ ...
+
+    00000034  00 1a 61 75 64 67 00 00  00 2e 00 00 00 2e 01 ff ..audg.. ........
+
+    00000044  00 00 0f 00 00 00 0f 00  00 00 00 00             ........ ....
+
+000001CB  53 54 41 54 00 00 00 33  61 75 64 67 00 00 00 00 STAT...3 audg....
+
+000001DB  30 00 00 00 00 00 00 00  00 00 00 00 00 00 00 ff 0....... ........
+
+000001EB  ff 00 00 4e 9c 00 35 d5  40 00 00 00 00 00 00 00 ...N..5. @.......
+
+000001FB  00 00 00 00 00 00 00 00  00 00 00                ........ ...
+
+    00000050  00 11 73 65 74 64 00 53  71 75 65 65 7a 65 50 6c ..setd.S queezePl
+
+    00000060  61 79 00                                         ay.
+
+00000206  53 54 41 54 00 00 00 33  73 65 74 64 00 00 00 00 STAT...3 setd....
+
+00000216  30 00 00 00 00 00 00 00  00 00 00 00 00 00 00 ff 0....... ........
+
+00000226  ff 00 00 4e a2 00 35 d5  40 00 00 00 00 00 00 00 ...N..5. @.......
+
+00000236  00 00 00 00 00 00 00 00  00 00 00                ........ ...
+
+    00000063  00 1a 61 75 64 67 00 00  00 21 00 00 00 21 01 ff ..audg.. .!...!..
+
+    00000073  00 00 08 00 00 00 08 00  00 00 00 00             ........ ....
+
+00000241  53 54 41 54 00 00 00 33  61 75 64 67 00 00 00 00 STAT...3 audg....
+
+00000251  30 00 00 00 00 00 00 00  00 00 00 00 00 00 00 ff 0....... ........
+
+00000261  ff 00 00 58 3b 00 35 d5  40 00 00 00 00 00 00 00 ...X;.5. @.......
+
+00000271  00 00 00 00 00 00 00 00  00 00 00                ........ ...
+
+    0000007F  00 1a 61 75 64 67 00 00  00 21 00 00 00 21 01 ff ..audg.. .!...!..
+
+    0000008F  00 00 08 00 00 00 08 00  00 00 00 00             ........ ....
+
+0000027C  53 54 41 54 00 00 00 33  61 75 64 67 00 00 00 00 STAT...3 audg....
+
+0000028C  30 00 00 00 00 00 00 00  00 00 00 00 00 00 00 ff 0....... ........
+
+0000029C  ff 00 00 58 3e 00 35 d5  40 00 00 00 00 00 00 00 ...X>.5. @.......
+
+000002AC  00 00 00 00 00 00 00 00  00 00 00                ........ ...
+
+    0000009B  00 06 61 75 64 65 00 00                          ..aude.. 
+
+000002B7  53 54 41 54 00 00 00 33  61 75 64 65 00 00 00 00 STAT...3 aude....
+
+000002C7  30 00 00 00 00 00 00 00  00 00 00 00 00 00 00 ff 0....... ........
+
+000002D7  ff 00 00 95 09 00 35 d5  40 00 00 00 00 00 00 00 ......5. @.......
+
+000002E7  00 00 00 00 00 00 00 00  00 00 00                ........ ...
+
+    000000A3  00 06 61 75 64 65 01 01                          ..aude.. 
+
+000002F2  53 54 41 54 00 00 00 33  61 75 64 65 00 00 00 00 STAT...3 aude....
+
+00000302  30 00 00 00 00 00 00 00  00 00 00 00 00 00 00 ff 0....... ........
+
+00000312  ff 00 00 9a 4a 00 35 d5  40 00 00 00 00 00 00 00 ....J.5. @.......
+
+00000322  00 00 00 00 00 00 00 00  00 00 00                ........ ...
+
+---
